# AnyChat

./: .gitignore  LICENSE  README.md  langchain_local.py  pyproject.toml  requirements.txt  uploadFile.py
.streamlit/: config.toml
src/anychat/: __init__.py  chatbot.py  chatbot_langchain.py  ingest.py  langchain_local.py
src/anychat/.streamlit/: config.toml  secrets.toml  secrets_example.toml
src/anychat/helper/: helper.py
