[project]
name = "anychat"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shitanshu Shivam", email = "shiva.shitanshu2018@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/anychat"]